# OpenImageFilter

./: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Color.h  Effect.cpp  Effect.h  Logger.cpp  Logger.h  OpenImageFilter.sln  OpenImageFilter.vcxproj  OpenImageFilter.vcxproj.filters  functions.h  kernels.h  main.cpp  main.gui
enc_temp_folder/9a9d66ba72f4518860f93c24f2a8933/: main.cpp
src/: Bitmap.cpp  Bitmap.h  Color.h  Filter.cpp  Filter.h  Kernels.h  Logger.cpp  Logger.h  main.cpp
